Arranging sass and scss files; Added clearfix in utils

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+<div>
+	<div class="inner"><h1>Hellow world!</h1></div>
+	<p>Nullam sit amet velit eu nisl viverra accumsan. In ut eros nulla. Phasellus fringilla tortor ac tellus elementum, a auctor orci imperdiet. Donec mollis finibus est, vel aliquet augue. Sed pulvinar interdum arcu ac laoreet. Quisque laoreet ultrices elit, id commodo urna fringilla ut. Maecenas vitae condimentum erat. Curabitur feugiat, metus vel sodales tincidunt, tellus urna faucibus tortor, ut iaculis ipsum lorem vel tellus. Pellentesque mattis, augue non placerat ornare, massa odio bibendum erat, a accumsan orci nunc quis dui. Aenean vel urna quis quam finibus dapibus.</p>
+</div>
 </body>
 </html>
